@@ -5,6 +5,10 @@ Changelog
 1.13.1 (unreleased)
 -------------------
 
+- Command: add fake terminal fallback when blessed cannot be loaded.
+  This can happen for example when Python is built without curses support.
+  [jone]
+
 - ``bin/upgrade recook`` command for recooking resources.
   [jone]
 
